--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,10 +1,6 @@
 name: CMake
 
 on:
-  push:
-    branches: [main, v0.x]
-  pull_request:
-    branches: [main, v0.x]
   workflow_dispatch:
 
 env:
@@ -12,6 +8,14 @@ env:
   BUILD_TYPE: Release
 
 jobs:
+  build-ubuntu-24:
+    # GitHub-hosted Ubuntu 24.04 runner
+    runs-on: ubuntu-24.04
+    # Use shared steps
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/workflows/shared_steps
+
   build-ubuntu-22:
     # GitHub-hosted Ubuntu 22.04 runner
     runs-on: ubuntu-22.04
