--- a/cmake/flexiv_rdk-config.cmake.in
+++ b/cmake/flexiv_rdk-config.cmake.in
@@ -5,7 +5,8 @@ set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_dependency(Threads REQUIRED)
 find_dependency(Eigen3 REQUIRED)
 find_dependency(spdlog REQUIRED)
-find_dependency(fastrtps 2.6.7 REQUIRED)
+find_dependency(fastrtps REQUIRED)
+find_dependency(fastcdr REQUIRED)
 
 # Add targets file
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
