Force removing the installed dummy lib before install the actual lib, because github actions have trouble overriding file with the same name during make install

--- a/.github/workflows/shared_steps/action.yml
+++ b/.github/workflows/shared_steps/action.yml
@@ -7,7 +7,7 @@ runs:
     - name: Build and install dependencies
       shell: bash
       run: |
-        pwd
+        cmake --version
         cd thirdparty
         bash build_and_install_dependencies.sh ~/rdk_install 4
 
@@ -15,7 +15,6 @@ runs:
     - name: Build and install library
       shell: bash
       run: |
-        pwd
         mkdir -p build && cd build
         cmake .. -DCMAKE_INSTALL_PREFIX=~/rdk_install
         cmake --build . --target install --config Release
@@ -24,7 +23,6 @@ runs:
     - name: Build examples
       shell: bash
       run: |
-        pwd
         cd example
         mkdir -p build && cd build
         cmake .. -DCMAKE_PREFIX_PATH=~/rdk_install
@@ -34,7 +32,6 @@ runs:
     - name: Build tests
       shell: bash
       run: |
-        pwd
         cd test
         mkdir -p build && cd build
         cmake .. -DCMAKE_PREFIX_PATH=~/rdk_install
