Set a fixed cmake version to use for github actions

--- a/.github/workflows/shared_steps/action.yml
+++ b/.github/workflows/shared_steps/action.yml
@@ -3,6 +3,12 @@ runs:
   using: "composite"
   # Note: working directory will be reset to the repo root for each new step
   steps:
+    # Use a fixed CMake version
+    - name: Set up CMake
+      uses: jwlawson/actions-setup-cmake@v2
+      with:
+        cmake-version: '3.22.1'
+
     # Build and install all dependencies to RDK installation directory.
     - name: Build and install dependencies
       shell: bash
