--- a/cmake/flexiv_rdk-config.cmake.in
+++ b/cmake/flexiv_rdk-config.cmake.in
@@ -7,6 +7,7 @@ find_dependency(Eigen3 REQUIRED)
 find_dependency(spdlog REQUIRED)
 find_dependency(fastrtps REQUIRED)
 find_dependency(fastcdr REQUIRED)
+find_dependency(RBDyn REQUIRED)
 
 # Add targets file
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
