--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,8 @@ if(RDK_SUPPORT_ROS2_JAZZY)
     elseif(${CMAKE_SYSTEM_PROCESSOR} MATCHES "aarch64")
       set(RDK_LIB "libflexiv_rdk.aarch64-linux-gnu.ros2-jazzy.a")
     else()
-      message(FATAL_ERROR "Linux with ${CMAKE_SYSTEM_PROCESSOR} processor is currently not supported.")
+      message(FATAL_ERROR 
+        "Compatibility with ROS2 Jazzy is currently not supported on Linux with ${CMAKE_SYSTEM_PROCESSOR} processor.")
     endif()
   else()
     message(FATAL_ERROR "Compatibility with ROS2 Jazzy is currently not supported on ${CMAKE_SYSTEM_NAME}.")
